update: Update certain files.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ interface Props {
 
 const {
   title = 'byteco.dev',
-  description = 'Personal site of byteco - thoughts on web development, programming, and technology',
+  description = 'Personal blog for sharing writeups for CTFs, vulnerabilities, exploits and more.',
   image = '/og-image.png',
   article = false,
   publishedTime,
