update: Update again certain files.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const currentYear = new Date().getFullYear();
 const socialLinks = [
   { name: 'GitHub', href: 'https://github.com/bytecodesky', icon: Github },
   { name: 'Twitter', href: 'https://twitter.com/bytecodev', icon: Twitter },
-  { name: 'Mail', href: 'mailto:bytecodesky@bugcrowd.com', icon: Mail },
+  { name: 'Mail', href: 'mailto:bytecodesky@bugcrowdninja.com', icon: Mail },
 ];
 ---
 
